--- a/css/master.css
+++ b/css/master.css
@@ -1,4 +1,5 @@
 /******************************** Index.php ********************************/
-div #title {
+div#title {
   text-align: center;
+  font-family: 'Handlee', cursive;
 }
