--- a/css/master.css
+++ b/css/master.css
@@ -1,5 +1,5 @@
 /******************************** Index.php ********************************/
-div#title {
+.title {
   text-align: center;
   font-family: 'Handlee', cursive;
 }
