--- a/css/master.css
+++ b/css/master.css
@@ -24,6 +24,18 @@ header {
 .title span:last-child {
   color: #2161c6;
 }
+main {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.grid-box {
+  margin: 0 auto;
+  width: 60rem;
+  height: 35rem;
+  background: #e3e3e3;
+  display: block;
+}
 footer .footer-box {
   color: white;
 }
