--- a/css/master.css
+++ b/css/master.css
@@ -1,6 +1,8 @@
 /******************************** Index.php ********************************/
 body {
   position: fixed;
+  margin: 0;
+  height: 100%;
   background-color: #1a1a2a;
   -webkit-background-image: radial-gradient(circle, transparent 0%, #0a0b13 100%), url(http://d2xgoeeq7a4bfy.cloudfront.net/v1/noise-160.png);
   background-image: radial-gradient(circle, transparent 0%, #0a0b13 75%), url(http://d2xgoeeq7a4bfy.cloudfront.net/v1/noise-160.png);
@@ -26,4 +28,8 @@ header {
 }
 footer .footer-box {
   color: white;
+  background-color: black;
+  height: 75px;
+  line-height: 75px;
+  text-align: center;
 }
