--- a/css/master.less
+++ b/css/master.less
@@ -44,12 +44,13 @@ main{
 }
 
 footer{
+  display: block;
+  background-color: black;
+  height: 75px;
+  line-height: 75px;
+  text-align: center;
   .footer-box{
     color: white;
-    background-color: black;
-    height: 75px;
-    line-height: 75px;
-    text-align: center;
   }
 
 }
