Dobbel en Love icon

--- a/css/master.less
+++ b/css/master.less
@@ -87,6 +87,20 @@ main{
   background: #e3e3e3;
   display: block;
 }
+p#dobbel {
+  color: white;
+  text-align: center;
+  font-size: 2em;
+}
+.dobbelsteen {
+    display: flex;
+}
+button#dobbelen {
+  margin: 50px auto;
+  padding: 15px;
+  background: wheat;
+  border-radius: 5px;
+}
 
 footer{
   display: block;
