--- a/css/master.less
+++ b/css/master.less
@@ -41,8 +41,6 @@ q:before, q:after {
 	content: none;
 }
 
-
-
 /******************************** Index.php ********************************/
 body{
   position: fixed;
@@ -86,6 +84,18 @@ main{
   height: 35rem;
   background: #e3e3e3;
   display: block;
+}
+.grid-row{
+  width: 100%;
+  height: 100%/5;
+  display: flex;
+}
+
+.grid-item{
+  width: 100%/9;
+  height: 100%;
+  display: block;
+  background: url(../img/vak_recht.svg);
 }
 
 footer{
