--- a/css/master.css
+++ b/css/master.css
@@ -163,6 +163,17 @@ main {
   background: #e3e3e3;
   display: block;
 }
+.grid-row {
+  width: 100%;
+  height: 20%;
+  display: flex;
+}
+.grid-item {
+  width: 11.11111111%;
+  height: 100%;
+  display: block;
+  background: url(../img/vak_recht.svg);
+}
 footer {
   display: block;
   background-color: black;
